# techno_park

./: .gitignore  CMakeLists.txt  README.md
HW_1/: CMakeLists.txt
HW_1/src/: :q  echo.cpp  process.cpp
HW_2/: CMakeLists.txt
HW_2/include/: Baselogger.h  FileLogger.h  Form.h  GlobalFunction.h  Level.h  Logger.h  StderrLogger.h  StdoutLogger.h
HW_2/lib/: BaseLogger.cpp  Form.cpp  GlobalFunction.cpp  StderrLogger.cpp  StdoutLogger.cpp
HW_2/src/: main.cpp
HW_3/: CMakeLists.txt
HW_3/include/: Connection.h  Server.h  exception.h
HW_3/lib/: CMakeLists.txt  Connection.cpp  Server.cpp
HW_3/src/: test_client.cpp  test_server.cpp
HW_4/: CMakeLists.txt
HW_4/include/: Connection.h  Descriptor.h  Server.h  exception.h
HW_4/lib/: CMakeLists.txt  Connection.cpp  Descriptor.cpp  Server.cpp
HW_4/src/: test_client.cpp  test_server.cpp
HW_5/: CMakeLists.txt
HW_5/lib/: Allocator.h  Semaphore.h  SemaphoreLock.h  SharedMap.h  shmem.h
HW_5/src/: main.cpp
include/: .process.h.icloud  BadLog.h  Connection.h  Server.h  exeption_process.h  process.h
lib/: CMakeLists.txt  Connection.cpp  FileLogger.cpp  Logger.cpp  Server.cpp
src/: .main.cpp.icloud  .process.cpp.icloud  main.cpp  process.cpp  test_client.cpp  test_server.cpp
